--- a/SpriteWalkthough/LaunchScreen_japanese.storyboard
+++ b/SpriteWalkthough/LaunchScreen_japanese.storyboard
@@ -8,20 +8,21 @@
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="JP Box Art.png" translatesAutoresizingMaskIntoConstraints="NO" id="GgT-tT-WFg">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="japaneseLaunchImage2.png" translatesAutoresizingMaskIntoConstraints="NO" id="GgT-tT-WFg">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="GgT-tT-WFg" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="XH7-PH-AtD"/>
                             <constraint firstAttribute="trailing" secondItem="GgT-tT-WFg" secondAttribute="trailing" id="clp-fe-OpQ"/>
@@ -29,13 +30,13 @@
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="GgT-tT-WFg" secondAttribute="bottom" id="zjV-zT-lD9"/>
                         </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="JP Box Art.png" width="751" height="1335"/>
+        <image name="japaneseLaunchImage2.png" width="749" height="1331"/>
     </resources>
 </document>
